# TermTalk

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  client_app  server_app  test_banned
src/banned/: banned.c  banned.h  banned_words.txt  test_banned.c
src/client/: clientutils  main.c
src/server/: main.c  serverutils
src/src/: client.c  server.c
src/utils/: utils  utils.c  utils.h
