add_library(banned banned/banned.c banned/banned.h)
add_library(utils utils/utils.c utils/utils.h)
target_link_libraries(utils PUBLIC banned)
add_executable(server_app server/main.c)
add_executable(client_app client/main.c)
target_link_libraries(server_app PRIVATE utils)
target_link_libraries(client_app PRIVATE utils)